--- a/src/app/components/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/components/iniciar-sesion/iniciar-sesion.component.html
@@ -116,6 +116,9 @@
               <button type="button" class="small-button" (click)="IniciarMorales()">
                 <img src="assets/iconos/profile_7310896.png" alt="" />
               </button>
+              <button type="button" class="small-button" (click)="CambiarIdioma()">
+                <img src="assets/iconos/profile_7310897.png" alt="" />
+              </button>
             </div>
           </div>
         </div>
