--- a/src/app/components/juegos/ahorcado/ahorcado.html
+++ b/src/app/components/juegos/ahorcado/ahorcado.html
@@ -23,11 +23,7 @@
   </div>
   <div class="navbar-right">
     <span class="user-name">{{ this.auth.usuarioIngresado.nombre }}</span>
-    <img
-      src="{{ this.auth.usuarioIngresado.foto }}"
-      alt="Foto del usuario"
-      class="user-photo"
-    />
+    <img src="{{ this.auth.usuarioIngresado.foto }}" alt="Foto del usuario" class="user-photo" />
   </div>
 </nav>
 }
@@ -36,68 +32,92 @@
 <div class="ahorcado-container">
   <div class="row w-100 justify-content-center align-items-center">
     <div class="col-3 text-center d-none d-md-block">
-        <p class="vida">{{diccionario[idioma()]["Vida"]}}{{vida}}</p>
+      <p class="vida">{{diccionario[idioma()]["Vida"]}}{{vida}}</p>
     </div>
     <div class="horca">
-        <div class="palo-vertical"></div>
-        <div class="palo-horizontal"></div>
-        <div class="cuerda"></div>
-        <div class="cabeza" [style.display]="vida <= 5 ? 'block' : 'none'"></div>
-        <div class="cuerpo" [style.display]="vida <= 4 ? 'block' : 'none'"></div>
-        <div class="brazo-izq" [style.display]="vida <= 3 ? 'block' : 'none'"></div>
-        <div class="brazo-der" [style.display]="vida <= 2 ? 'block' : 'none'"></div>
-        <div class="pierna-izq" [style.display]="vida <= 1 ? 'block' : 'none'"></div>
-        <div class="pierna-der" [style.display]="vida === 0 ? 'block' : 'none'"></div>
+      <div class="palo-vertical"></div>
+      <div class="palo-horizontal"></div>
+      <div class="cuerda"></div>
+      <div class="cabeza" [style.display]="vida <= 5 ? 'block' : 'none'"></div>
+      <div class="cuerpo" [style.display]="vida <= 4 ? 'block' : 'none'"></div>
+      <div class="brazo-izq" [style.display]="vida <= 3 ? 'block' : 'none'"></div>
+      <div class="brazo-der" [style.display]="vida <= 2 ? 'block' : 'none'"></div>
+      <div class="pierna-izq" [style.display]="vida <= 1 ? 'block' : 'none'"></div>
+      <div class="pierna-der" [style.display]="vida === 0 ? 'block' : 'none'"></div>
     </div>
     <div class="palabra-oculta">
-        @for (letra of palabraOculta; track $index) {
-            <span class="letra-oculta">{{ letra }}</span>
-        }
+      @for (letra of palabraOculta; track $index) {
+      <span class="letra-oculta">{{ letra }}</span>
+      }
     </div>
-        <div class="tablero">
-            <button class="letra-btn" (click)="a()" [disabled]="puestoA">A</button>
-            <button class="letra-btn" (click)="b()" [disabled]="puestoB">B</button>
-            <button class="letra-btn" (click)="c()" [disabled]="puestoC">C</button>
-            <button class="letra-btn" (click)="d()" [disabled]="puestoD">D</button>
-            <button class="letra-btn" (click)="e()" [disabled]="puestoE">E</button>
-            <button class="letra-btn" (click)="f()" [disabled]="puestoF">F</button>
-            <button class="letra-btn" (click)="g()" [disabled]="puestoG">G</button>
-            <button class="letra-btn" (click)="h()" [disabled]="puestoH">H</button>
-            <button class="letra-btn" (click)="i()" [disabled]="puestoI">I</button>
-            <button class="letra-btn" (click)="j()" [disabled]="puestoJ">J</button>
-            <button class="letra-btn" (click)="k()" [disabled]="puestoK">K</button>
-            <button class="letra-btn" (click)="l()" [disabled]="puestoL">L</button>
-            <button class="letra-btn" (click)="m()" [disabled]="puestoM">M</button>
-            <button class="letra-btn" (click)="n()" [disabled]="puestoN">N</button>
-            <button class="letra-btn" (click)="enie()" [disabled]="puestoENIE">Ñ</button>
-            <button class="letra-btn" (click)="o()" [disabled]="puestoO">O</button>
-            <button class="letra-btn" (click)="p()" [disabled]="puestoP">P</button>
-            <button class="letra-btn" (click)="q()" [disabled]="puestoQ">Q</button>
-            <button class="letra-btn" (click)="r()" [disabled]="puestoR">R</button>
-            <button class="letra-btn" (click)="s()" [disabled]="puestoS">S</button>
-            <button class="letra-btn" (click)="t()" [disabled]="puestoT">T</button>
-            <button class="letra-btn" (click)="u()" [disabled]="puestoU">U</button>
-            <button class="letra-btn" (click)="v()" [disabled]="puestoV">V</button>
-            <button class="letra-btn" (click)="w()" [disabled]="puestoW">W</button>
-            <button class="letra-btn" (click)="x()" [disabled]="puestoX">X</button>
-            <button class="letra-btn" (click)="y()" [disabled]="puestoY">Y</button>
-            <button class="letra-btn" (click)="z()" [disabled]="puestoZ">Z</button>
-        </div>
-        <!-- <div class="resultado">
+    <div class="tablero">
+      @if(idioma() != "ru") {
+              <button class="letra-btn" (click)="a()" [disabled]="puestoA">A</button>
+      <button class="letra-btn" (click)="b()" [disabled]="puestoB">B</button>
+      <button class="letra-btn" (click)="c()" [disabled]="puestoC">C</button>
+      <button class="letra-btn" (click)="d()" [disabled]="puestoD">D</button>
+      <button class="letra-btn" (click)="e()" [disabled]="puestoE">E</button>
+      <button class="letra-btn" (click)="f()" [disabled]="puestoF">F</button>
+      <button class="letra-btn" (click)="g()" [disabled]="puestoG">G</button>
+      <button class="letra-btn" (click)="h()" [disabled]="puestoH">H</button>
+      <button class="letra-btn" (click)="i()" [disabled]="puestoI">I</button>
+      <button class="letra-btn" (click)="j()" [disabled]="puestoJ">J</button>
+      <button class="letra-btn" (click)="k()" [disabled]="puestoK">K</button>
+      <button class="letra-btn" (click)="l()" [disabled]="puestoL">L</button>
+      <button class="letra-btn" (click)="m()" [disabled]="puestoM">M</button>
+      <button class="letra-btn" (click)="n()" [disabled]="puestoN">N</button>
+      <button class="letra-btn" (click)="enie()" [disabled]="puestoENIE">Ñ</button>
+      <button class="letra-btn" (click)="o()" [disabled]="puestoO">O</button>
+      <button class="letra-btn" (click)="p()" [disabled]="puestoP">P</button>
+      <button class="letra-btn" (click)="q()" [disabled]="puestoQ">Q</button>
+      <button class="letra-btn" (click)="r()" [disabled]="puestoR">R</button>
+      <button class="letra-btn" (click)="s()" [disabled]="puestoS">S</button>
+      <button class="letra-btn" (click)="t()" [disabled]="puestoT">T</button>
+      <button class="letra-btn" (click)="u()" [disabled]="puestoU">U</button>
+      <button class="letra-btn" (click)="v()" [disabled]="puestoV">V</button>
+      <button class="letra-btn" (click)="w()" [disabled]="puestoW">W</button>
+      <button class="letra-btn" (click)="x()" [disabled]="puestoX">X</button>
+      <button class="letra-btn" (click)="y()" [disabled]="puestoY">Y</button>
+      <button class="letra-btn" (click)="z()" [disabled]="puestoZ">Z</button>
+      }
+      @if(idioma() == "ru") {
+<button class="letra-btn" (click)="a_ru()" [disabled]="puestoA_ru">А</button>
+<button class="letra-btn" (click)="e_ru()" [disabled]="puestoE_ru">Е</button>
+<button class="letra-btn" (click)="i_ru()" [disabled]="puestoI_ru">И</button>
+<button class="letra-btn" (click)="k_ru()" [disabled]="puestoK_ru">К</button>
+<button class="letra-btn" (click)="l_ru()" [disabled]="puestoL_ru">Л</button>
+<button class="letra-btn" (click)="m_ru()" [disabled]="puestoM_ru">М</button>
+
+<button class="letra-btn" (click)="n_ru()" [disabled]="puestoN_ru">Н</button>
+<button class="letra-btn" (click)="o_ru()" [disabled]="puestoO_ru">О</button>
+<button class="letra-btn" (click)="p_ru()" [disabled]="puestoP_ru">П</button>
+<button class="letra-btn" (click)="r_ru()" [disabled]="puestoR_ru">Р</button>
+<button class="letra-btn" (click)="s_ru()" [disabled]="puestoS_ru">С</button>
+<button class="letra-btn" (click)="t_ru()" [disabled]="puestoT_ru">Т</button>
+
+<button class="letra-btn" (click)="u_ru()" [disabled]="puestoU_ru">У</button>
+<button class="letra-btn" (click)="ts_ru()" [disabled]="puestoTS_ru">Ц</button>
+<button class="letra-btn" (click)="sh_ru()" [disabled]="puestoSH_ru">Ш</button>
+<button class="letra-btn" (click)="signoBlando_ru()" [disabled]="puestoSignoBlando_ru">Ь</button>
+<button class="letra-btn" (click)="ya_ru()" [disabled]="puestoYA_ru">Я</button>
+<button class="letra-btn" (click)="n_ru()" [disabled]="puestoN_ru">Н</button>
+<button class="letra-btn" (click)="e_ru()" [disabled]="puestoE_ru">Е</button>
+      }
+    </div>
+    <!-- <div class="resultado">
             <p>{{ mensaje }}</p>
 
             @if (reiniciar) {
                 <button class="reiniciar-btn" (click)="reiniciarPartida()">Otra palabra</button>
             }
         </div> -->
-    </div>
-    <div class="col-3"></div>
   </div>
+  <div class="col-3"></div>
+</div>
 
 
 <div class="back-button">
-<button (click)="cerrarSesion()">
+  <button (click)="cerrarSesion()">
     <fa-icon [icon]="faRightFromBracket"></fa-icon>
-</button>
+  </button>
 </div>
-
