--- a/src/global.scss
+++ b/src/global.scss
@@ -10,6 +10,7 @@
  */
 
 /* Core CSS required for Ionic components to work properly */
+@import 'leaflet/dist/leaflet.css';
 @import "@ionic/angular/css/core.css";
 
 /* Basic CSS for apps built with Ionic */
